# fabric-skills-settings

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  docker-compose.yml  plan.md  pyproject.toml  setup.ps1  setup.sh
.claude/: settings.json
.claude/agents/: data-analyst.md  data-architect.md  data-engineer.md  data-steward.md  developer.md  operator.md  orchestrator.md  tester.md
.claude/commands/: audit-security.md  build-gold.md  ingest-bronze.md  manage-ops.md  process-silver.md
.codex-fabric/: MEMORY.md
.codex-fabric/memory/: decisions.md  platform.md  project.md
.github/workflows/: docker-publish.yml  publish.yml  python-publish.yml
cli/fabric_agent_installer/: _installer.py
cli/profiles/claude/: CLAUDE.md  settings.local.json
cli/profiles/codex/: AGENTS.md  config.toml
cli/profiles/shared/: .env.example
cli/setup/: setup.ps1  setup.sh
cli/src/fabric_skills_settings/: __init__.py  __main__.py  cli.py  logging_config.py  runtime_cli.py
cli/tools/auth/: refresh.py
cli/tools/lint/: __init__.py  __main__.py  core.py  de_faker_seed.py
cli/tools/notebook/: smoke-test.ps1  smoke-test.sh
cli/tools/precommit/: pre-commit-check.ps1  pre-commit-check.sh
cli/tools/workspace/: init.py  pick.py  switch.py
config/: thresholds.yaml
content/graph-content/layout/: directory-layout.md  tool-layout.md
content/graph-content/session/: operating-rules.md
content/rules/: data-engineering.md  fabric-platform.md  notebook-authoring.md  security.md
docs/: GDPR_PATH.md  agent-guidance-map.md  agent-map.md  architecture.md  configuration.md  context.md  dead-blocks.md  deployment-pipeline.md  fabric-mcp-readonly-discovery.md  fabric-sandbox-smoke-test.md  knowledge-graph.md  learn-more.md  mcp-auth-flow.md  networkx-flow.md  setup-autoload.md  tooling-map.md  vendor-native-installation-plan.md  workflow.md
docs/examples/: mock-orders-source-contract.yaml
fabric_skills_settings/: __init__.py  __main__.py  _installer.py
frontend/: jest.config.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/docker/: Dockerfile
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useNodes.ts  useTokenRefresh.ts
frontend/src/lib/: api.ts  audit.ts  auth.ts  types.ts  utils.ts
mcp/: graph-server.py  server.py
memory/: MEMORY.md
packaging/: install-fabric-agent
packaging/builders/: build-agent-capability-graph.py  build-graph.py
packaging/builders/graph_build/: __init__.py  visualize.py
packaging/fabric_agent_installer/: __init__.py  __main__.py  _installer.py
packaging/validators/: validate-agent-guidance.py  validate-install-package.py
profiles/claude/: CLAUDE.md  settings.json  settings.local.json
profiles/claude/agents/: developer.md  operator.md  orchestrator.md  tester.md
profiles/codex/: AGENTS.md  config.toml
profiles/codex/agents/: developer.toml  operator.toml  orchestrator.toml  tester.toml
profiles/shared/: .env.example  .gitignore.fragment
profiles/shared/graph-content/: entry.md
profiles/shared/memory/: MEMORY.md  RTK.md  decisions.md  project.md  (+2 more)
roadmap/: ROADMAP.md  external-skills.md
rules/: data-engineering.md  fabric-platform.md  security.md
server/: .dockerignore  Dockerfile  __main__.py  app.py  docker-compose.yml  script_runner.py
server/api/: routes.py
server/auth/: __init__.py  middleware.py  repository.py
server/builders/: build-graph.py
server/content/: entry.md
server/graph/: search.py  writes.py
server/tools/: __init__.py
skills/: fabric-notebook-loop.md  fabric-ops.md
templates/: access-review.md  data-quality-checklist.md  incident-report.md  mock-data-generator.py  pipeline-brief.md  release-checklist.md  runbook.md  security-review.md  source-contract.yaml
tests/: conftest.py  test_admin_api.py  test_agent_capability_graph.py  test_agent_guidance.py  test_api_key_repository.py  test_auth_refresh.py  test_build.py  test_extract.py  test_fab_sandbox_ps1.py  test_graph_builder.py  test_graph_mcp.py  test_graph_search.py  test_graph_store.py  test_graph_visualize.py  test_install_package.py  test_layout.py  test_lint.py  test_local_helper_wrappers.py  test_manage.py  test_mcp_wrappers.py  test_mock_data_generator.py  test_profile_entrypoints.py  test_semantic_model_inspect.py  test_server_auth.py  test_skill_split_coverage.py  test_validator_profile_minimal.py  test_version_check.py
tests/_validation/: __init__.py  agent_guidance.py  install_package.py
tool/: pre-commit-check.ps1  pre-commit-check.sh
tool/graph/: __init__.py  builder.py  extract.py  schema.py  store.py  writes.py
tool/lakehouse/: list-tables.py
tool/lint/: __main__.py  core.py  sec_no_hardcoded_secrets.py
tool/mcp/: graph-server.py  server.py
tool/notebook/: build.py  deploy.py  smoke-test.sh
tool/pipeline/: manage.py
tool/semantic-model/: inspect.py
tool/setup/: fab-sandbox.ps1  fabric-inventory-readonly  fabric-inventory-readonly.ps1  setup.ps1  setup.sh
tool/validate/: source-contract.py
tool/workspace/: init.py
(+139 files in other folders)
