[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fabric-skills-settings"
dynamic = ["version"]
description = "Install Microsoft Fabric agent profiles (Claude Code and Codex) into a target repository."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
install-fabric-agent = "fabric_agent_installer._installer:main"

[dependency-groups]
dev = ["pytest>=8", "Faker>=26", "mimesis>=18", "scikit-learn>=1.5", "pandas>=2", "networkx>=3.2", "rank_bm25>=0.2.2"]

[project.optional-dependencies]
graph = ["networkx>=3.2", "rank_bm25>=0.2.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["packaging/fabric_agent_installer"]

[tool.hatch.build.targets.wheel.sources]
"packaging/fabric_agent_installer" = "fabric_agent_installer"

[tool.hatch.build.targets.wheel.force-include]
"profiles" = "fabric_agent_installer/_profiles"
"content" = "fabric_agent_installer/_content"
"tool" = "fabric_agent_installer/_tool"
"mcp" = "fabric_agent_installer/_mcp"
"dist/.graph" = "fabric_agent_installer/_graph"

[tool.hatch.build.targets.sdist]
include = [
    "packaging/",
    "profiles/",
    "tool/",
    "mcp/",
    "content/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "setup.ps1",
    "setup.sh",
]

# Pre-built knowledge graph artifacts must ship to target repos. They live under
# dist/.graph (source-side build output) which is gitignored, so force-include is
# the only way to pull them into the sdist (which the wheel build then re-uses).
[tool.hatch.build.targets.sdist.force-include]
"dist/.graph" = "dist/.graph"
