[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fabric-vibecoding-settings"
dynamic = ["version"]
description = "Install Microsoft Fabric agent profiles (Claude Code and Codex) into a target repository."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "cryptography>=42",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
fabric-vibecoding-agents = "fabric_skills_settings.cli:app"
fabric-vibe = "fabric_skills_settings.runtime_cli:app"

[dependency-groups]
dev = ["pytest>=8", "Faker>=26", "mimesis>=18", "scikit-learn>=1.5", "pandas>=2", "networkx>=3.2", "rank_bm25>=0.2.2"]

[project.optional-dependencies]
graph = ["networkx>=3.2", "rank_bm25>=0.2.2"]
server = [
    "mcp>=1.0",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "networkx>=3.2",
    "rank_bm25>=0.2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
only-include = ["cli/src/fabric_skills_settings"]
sources = ["cli/src"]

[tool.hatch.build.targets.wheel.force-include]
"cli/profiles" = "fabric_skills_settings/_profiles"
"cli/setup" = "fabric_skills_settings/_setup"
"cli/tools" = "fabric_skills_settings/_tools"

[tool.hatch.build.targets.sdist]
include = [
    "cli/",
    "server/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
