[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fabric-vibecoding-settings"
dynamic = ["version"]
description = "Install Microsoft Fabric agent profiles (Claude Code and Codex) into a target repository."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
fabric-vibecoding-agents = "fabric_skills_settings.cli:app"
fabric-vibe = "fabric_skills_settings.runtime_cli:app"

[dependency-groups]
dev = ["pytest>=8", "Faker>=26", "mimesis>=18", "scikit-learn>=1.5", "pandas>=2", "networkx>=3.2", "rank_bm25>=0.2.2", "PyJWT>=2.8", "mcp>=1.0", "uvicorn>=0.30"]

[project.optional-dependencies]
graph = ["networkx>=3.2", "rank_bm25>=0.2.2"]
server = [
    "mcp>=1.0",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "networkx>=3.2",
    "rank_bm25>=0.2.2",
    "PyJWT>=2.8",
]
# Only needed when FABRIC_MCP_API_KEYS_SOURCE=azure-blob. File mode needs nothing extra.
server-azure = [
    "azure-storage-blob>=12.19",
    "azure-identity>=1.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
only-include = ["cli/src/fabric_skills_settings"]
sources = ["cli/src"]

[tool.hatch.build.targets.wheel.force-include]
"cli/profiles" = "fabric_skills_settings/_profiles"
"cli/setup" = "fabric_skills_settings/_setup"
"cli/tools" = "fabric_skills_settings/_tools"

[tool.hatch.build.targets.sdist]
include = [
    "cli/",
    "server/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
